--- a/interactive-desktoppc-portfolio/src/components/pages/LockScreen.css
+++ b/interactive-desktoppc-portfolio/src/components/pages/LockScreen.css
@@ -10,7 +10,7 @@
 
 .hero-container-lockScreen .username {
     position: absolute;    
-    top: 35%;
+    top: 30%;
     /* left: 50%;
     transform: translate(-50%, -50%); */
     color: rgb(255, 255, 255);
